--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
-  "eslintConfig": {
+  "eslintConfig": { 
     "extends": "react-app"
   },
-  "homepage": "https://github.com/brainschild-xpr/react_start",
+  "homepage": "https://brainschild-xpr.github.io/react_start",
   "browserslist": {
     "production": [
       ">0.2%",
@@ -33,8 +33,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "gh-pages": "^2.2.0"
   }
 }
